--- a/Pytorch_Q&A.ipynb
+++ b/Pytorch_Q&A.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "from huggingface_hub import HfFolder, whoami\n",
     "\n",
-    "hf_token = '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'\n",
+    "hf_token = 'xxxxxxx'\n",
     "HfFolder.save_token(hf_token)\n",
     "\n",
     "# Verify login\n",
